fixed phone quote text alignment problem

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -496,9 +496,6 @@ img {
   .home__text{
     width: 95% !important;
   }
-  .about__mean {
-    margin-left: 20%;
-  }
 
 
 }
